[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["deissh <deissh@yandex.ru>"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = ">=3.7"
celery = "^4.4.7"
cool-config = "^0.2.3"
boto3 = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
worker = 'worker:run'