[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["deissh <deissh@yandex.ru>"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = ">=3.7"
celery = "^4.4.7"
cool-config = "^0.2.3"
boto3 = "^1.15.1"
certifi = "^2020.6.20"
six = "^1.15.0"
python_dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
boto3-stubs = "^1.15.1"

[tool.poetry.scripts]
worker = 'worker:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

